examples/rust/failing/derive_attr_with_paths/ExpectedIdeally.rs
#[derive(Debug, my::Trait, their::OtherTrait)]
struct Foo;
